--- a/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Source\Challenges\Challenge_01.cpp"/>
     <ClCompile Include="Source\Challenges\Challenge_02.cpp"/>
     <ClCompile Include="Source\Challenges\Challenge_03.cpp"/>
+    <ClCompile Include="Source\Challenges\Challenge_04.cpp"/>
     <ClCompile Include="Source\Challenges\Challenge_N.cpp"/>
     <ClCompile Include="Source\Challenges\Common\Challenge.cpp"/>
     <ClCompile Include="Source\Helpers\FileHelpers.cpp"/>
@@ -155,6 +156,7 @@
     <ClInclude Include="Source\Challenges\Challenge_01.h"/>
     <ClInclude Include="Source\Challenges\Challenge_02.h"/>
     <ClInclude Include="Source\Challenges\Challenge_03.h"/>
+    <ClInclude Include="Source\Challenges\Challenge_04.h"/>
     <ClInclude Include="Source\Challenges\Challenge_N.h"/>
     <ClInclude Include="Source\Challenges\Common\Challenge.h"/>
     <ClInclude Include="Source\CommonDefinitions.h"/>
