Add day 05 part 1

--- a/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source"/>
-    <Filter Include="Source\Challenges"/>
-    <Filter Include="Source\Challenges\Common"/>
-    <Filter Include="Source\Generated"/>
-    <Filter Include="Source\Helpers"/>
+    <Filter Include="Source" />
+    <Filter Include="Source\Challenges" />
+    <Filter Include="Source\Challenges\Common" />
+    <Filter Include="Source\Generated" />
+    <Filter Include="Source\Helpers" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\AdventOfCode.cpp">
@@ -21,6 +21,9 @@
       <Filter>Source\Challenges</Filter>
     </ClCompile>
     <ClCompile Include="Source\Challenges\Challenge_04.cpp">
+      <Filter>Source\Challenges</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Challenges\Challenge_05.cpp">
       <Filter>Source\Challenges</Filter>
     </ClCompile>
     <ClCompile Include="Source\Challenges\Challenge_N.cpp">
@@ -44,6 +47,9 @@
       <Filter>Source\Challenges</Filter>
     </ClInclude>
     <ClInclude Include="Source\Challenges\Challenge_04.h">
+      <Filter>Source\Challenges</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Challenges\Challenge_05.h">
       <Filter>Source\Challenges</Filter>
     </ClInclude>
     <ClInclude Include="Source\Challenges\Challenge_N.h">
